library properties shouldn't specify avr since the code is generic to two wire

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Library for 2K I2C Serial EEPROMs with EUI-48™ or EUI-64™ Node Iden
 paragraph=It allows You to use Microchip Serial EEPROMs with Node Identity connected to I2C bus. Supported packaging: 24AA02E48, 24AA025E48, 24AA02E64, 24AA025E64
 category=Communication
 url=https://github.com/brapacz/Microchip24AA02E/blob/master/README.md
-architectures=avr
+architectures=*
